# JTC_Tech_Pathway_Capstone

./: .env.example  .gitignore  ADVANCED_UI_FEATURES.md  ARCHITECTURE.md  ARCHITECTURE_MVC.md  CAPSTONE_SUMMARY.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  README.md  README_ENHANCED.md  README_STUDENT_PACK.md  RESTORATION_COMPLETE.md  SECURITY.md  advanced_weather_app.py  cleanup.ps1  cleanup.py  cobra_integration_guide.py  cobra_weather_app.py  complete_weather_dashboard.py  config.py  debug_api.py  debug_startup.py  demo_advanced_ux.py  enhanced_weather_api.py  enhanced_weather_dashboard.py  enhanced_weather_launcher.py  launch_advanced_dashboard.py  launcher.py  launcher_mvc.py  pyproject.toml  requirements.txt  settings.json  setup_team.py  simple_demo.py  student_pack_demo.py  student_pack_gui.py  student_pack_gui_fixed.py  test_advanced_tables.py  (+21 more)
Weather Dominator/: README.md  README_COBRA.md  cobra_style.py
data/: weather_history.csv
data/historical_cache/: 41.83_-71.4_2020-01-01_2023-12-31.json  52.52_13.41_2020-01-01_2023-12-31.json
src/: __init__.py  main.py  main_mvc.py
src/business/: __init__.py  notification_service.py  settings_service.py  weather_service.py
src/config/: __init__.py  app_config.py  config.py
src/controllers/: __init__.py  application_controller.py  weather_controller.py
src/core/: __init__.py  weather_core.py
src/interfaces/: __init__.py  controller_protocols.py  service_protocols.py  view_protocols.py  weather_api_protocol.py
src/models/: __init__.py  weather_models.py
src/services/: __init__.py  weather_api.py  weather_api_new.py
src/ui/: __init__.py  advanced_dashboard.py  dashboard_ui.py  enhanced_dashboard.py  glassmorphic_components.py  glassmorphic_dashboard.py  glassmorphic_weather_displays.py  modern_components.py  search_components.py  settings_manager.py  status_components.py  tabular_components.py  weather_displays.py  weather_gui.py
src/utils/: data_storage.py  exceptions.py  historical_weather.py  logging.py  ml_predictions.py  smart_features.py  visual_features.py
src/views/: __init__.py  main_view.py  weather_view.py
tests/: test_complete_app.py  test_weather_dashboard.py
